Readme updates and Avaya mock modes changes

--- a/avaya-infinity-twilio-sms-connector/.env.example
+++ b/avaya-infinity-twilio-sms-connector/.env.example
@@ -1,21 +1,51 @@
+#----------------------------------------------
 # Server Configuration
+#----------------------------------------------
+# Port number for the server to listen on
 PORT=8081
+
+# Environment mode (e.g., development, production, mock_all)
 ENV=mock_all
+
+# Enable debug logging (e.g., express:*)
 DEBUG=express:*
 
-
+#----------------------------------------------
 # Twilio Configuration
+#----------------------------------------------
+# Your Twilio Account SID
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
+
+# Your Twilio Auth Token. This is optional if using API Key/Secret
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 
-# Twilio Configuration
+# Your Twilio API Key SID for authentication. 
+# Recommended over using Auth Token.
 TWILIO_API_KEY_SID=your_twilio_api_key_sid
+
+# Your Twilio API Key Secret for authentication.
+# Recommended over using Auth Token.
 TWILIO_API_KEY_SECRET=your_twilio_api_key_secret
 
+#----------------------------------------------
 # Avaya Infinity Configuration
-AVAYA_INFINITY_HOST=http://localhost:3001
+#----------------------------------------------
+# Base URL for Avaya Infinity API
+AVAYA_INFINITY_HOST=https://avaya-infinity-hostname
+
+# Client ID for Avaya Infinity OAuth2 authentication
 AVAYA_INFINITY_CLIENT_ID=avaya-infinity-mock
+
+# Client Secret for Avaya Infinity OAuth2 authentication
 AVAYA_INFINITY_CLIENT_SECRET=avaya-infinity-mock
+
+# Your Avaya Infinity Account ID
 AVAYA_INFINITY_ACCOUNT_ID=your_avaya_infinity_account_id
+
+# Your Avaya Infinity Connector ID
 AVAYA_INFINITY_CONNECTOR_ID=your_avaya_infinity_connector_id
+
+# Webhook secret for validating incoming requests from Avaya Infinity.
+# Set this if you have configured a webhook secret for your connector
+# in Avaya Infinity Admin Console.
 AVAYA_INFINITY_WEBHOOK_SECRET=your_avaya_infinity_webhook_secret
